--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.1",
+    "motion": "^12.23.3",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
