--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
     "react-resizable-panels": "^3.0.3",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^3.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
     "superjson": "^2.2.1",
