intelligence bug fixes

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
+    "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.4",
     "rehype-highlight": "^7.0.2",
@@ -95,6 +96,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "postcss": "^8.5.3",
