--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@clerk/elements": "^0.23.38",
     "@clerk/nextjs": "^6.24.0",
+    "@codeium/react-code-editor": "^1.0.12",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.11",
