--- a/package.json
+++ b/package.json
@@ -110,6 +110,9 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
+  "overrides": {
+    "react": "^19.0.0"
+  },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
   },
