--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
     "motion": "^12.23.3",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
