--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@clerk/elements": "^0.23.38",
     "@clerk/nextjs": "^6.24.0",
     "@codeium/react-code-editor": "^1.0.12",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -64,6 +65,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.3",
+    "framework7-icons": "^5.0.5",
+    "gsap": "^3.13.0",
     "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
