--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "gsap": "^3.13.0",
     "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "motion": "^12.23.3",
