--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "moment": "^2.30.1",
     "motion": "^12.23.3",
     "next": "^15.2.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "random-word-slugs": "^0.1.7",
