added stripe checkout

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 #supabse
 NEXT_PUBLIC_SUPABASE_URL=""
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+
+#stripe
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY="pk_test_**"
+STRIPE_SECRET_KEY="sk_test_**"
